--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -40,7 +40,6 @@ html, body {
     background-size: cover;
     color: white;
     padding:5px;
-    background-color: darkblue;
     width: 60%;
     font-size:25px;
     font-weight:bold;
@@ -73,6 +72,7 @@ html, body {
     font-size: medium;
     width: 16%;
     float: left;
+    overflow: hidden;
 }
 
 .menu-list ul li a {
@@ -98,19 +98,6 @@ html, body {
 }
 
 .right-div {
-    background: url("/images/default.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 70%;
-    float: left;
-    min-height: 500px;
-    position: relative;
-    text-align: center;
-    overflow: auto;
-}
-
-.left-div {
     background-color: rgba(43, 44, 175, 0.49);
     min-height: 500px;
     width: 29%;
@@ -140,8 +127,44 @@ html, body {
 
 .champ-details h1 {
     font-weight: bold;
-    text-align: center;
     color: #f3dd33;
+}
+
+
+.left-div {
+    background: url("/images/default.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 70%;
+    padding: 0;
+    margin: 0;
+    float: left;
+    min-height: 500px;
+    position: relative;
+    text-align: center;
+    overflow: auto;
+}
+.tab{
+    width:100%;
+    padding:0;
+    margin:0;
+
+}
+.top-tab{
+    padding:2px 0 2px 5px;
+    font-weight:bold;
+    background-color:#020330;
+    color: #00AEEF;
+}
+.sub-tab{
+    padding:2px 0 2px 5px;
+    background-color:rgba(23,57,103,0.73);
+    font-weight:400;
+    font-family: "Roboto", Arial, sans-serif;
+    border-radius:0 0 5px 5px;
+    color: whitesmoke;
+    margin-bottom: 2px;
 }
 
 /* For mobile phones: */
