--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="main-div">
- <div class="right-div">
+ <div class="left-div">
   <div class="champ-logo">
    <img src="/images/champ-white.png" width="200px">
   </div>
@@ -17,11 +17,28 @@
   </div>
   </div>
  </div>
- <div class="left-div">
-  <div class="">Founded: {{details.founded}}</div>
-  <div class="">Region: {{details.region}}</div>
-  <div class="">Number Of Teams: {{details.numberOfTeams}}</div>
-  <div class="">Qualified For: {{details.qualifierFor}}</div>
-  <div class="">Related Competitions: {{details.relatedCompetitions}}</div>
+ <div class="right-div">
+  <div class="tab">
+   <div class="top-tab">Founded</div>
+   <div class="sub-tab">{{details.founded}}</div>
+   <div class="sub-tab">{{details.founded}}</div>
+   <div class="sub-tab">{{details.founded}}</div>
+  </div>
+  <div class="tab">
+   <div class="top-tab">Region</div>
+   <div class="sub-tab">{{details.region}}</div>
+  </div>
+  <div class="tab">
+   <div class="top-tab">Number Of Teams</div>
+   <div class="sub-tab">{{details.numberOfTeams}}</div>
+  </div>
+  <div class="tab">
+   <div class="top-tab">Qualified For</div>
+   <div class="sub-tab">{{details.qualifierFor}}</div>
+  </div>
+  <div class="tab">
+   <div class="top-tab">Related Competitions</div>
+   <div class="sub-tab">{{details.relatedCompetitions}}</div>
+  </div>
  </div>
 </div>
