--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -99,10 +99,12 @@ html, body {
 
 .right-div {
     background-color: rgba(43, 44, 175, 0.49);
-    min-height: 500px;
+    height: 500px;
+    max-height: 500px;
     width: 29%;
     float: left;
     margin-left: 1%;
+    overflow: auto ;
 }
 
 .champ-logo {
@@ -140,10 +142,11 @@ html, body {
     padding: 0;
     margin: 0;
     float: left;
-    min-height: 500px;
+    height: 500px;
+    max-height: 500px;
     position: relative;
     text-align: center;
-    overflow: auto;
+    overflow: auto ;
 }
 .tab{
     width:100%;
@@ -200,4 +203,24 @@ html, body {
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
