--- a/app/views/team_list.html
+++ b/app/views/team_list.html
@@ -1,5 +1,16 @@
-<div>
- <div ng-repeat="team in teams">
-  <div>rank:<a ng-href="#/team/{{team.club}}" ng-bind="team.club"></a></div>
+<div class="main-div">
+ <div class="left-div animated slideInLeft">
+  <div>
+   <div ng-repeat="team in teams">
+    <div>rank:<a ng-href="#/team/{{team.club}}" ng-bind="team.club"></a></div>
+   </div>
+  </div>
+ </div>
+ <div class="right-div animated slideInRight">
+  <div class="tab">
+   <div class="top-tab animated slideInUp" > Top 10 Team </div>
+   <div class="sub-tab" ng-repeat="team in teams">
+    <div>{{team.rank}}</div>  <div>{{team.club}}</div> <div>{{team.winners}}</div></div>
+  </div>
  </div>
 </div>
