--- a/app/views/team_list.html
+++ b/app/views/team_list.html
@@ -1,16 +1,21 @@
 <div class="main-div">
  <div class="left-div animated slideInLeft">
-  <div>
-   <div ng-repeat="team in teams">
-    <div>rank:<a ng-href="#/team/{{team.club}}" ng-bind="team.club"></a></div>
-   </div>
+  <div style="margin: 10% auto">
+   <!--<div ng-repeat="team in teams">
+   <div>rank:<a ng-href="#/team/{{team.club}}" ng-bind="team.club"></a></div>
+   </div>-->
+   <a ng-href="#/team/REAL">
+    <img src="/images/real.png" width="200px" height="280px">
+   </a>
   </div>
  </div>
  <div class="right-div animated slideInRight">
   <div class="tab">
-   <div class="top-tab animated slideInUp" > Top 10 Team </div>
+   <div class="top-tab animated slideInUp" > Top 10 Teams </div>
    <div class="sub-tab" ng-repeat="team in teams">
-    <div>{{team.rank}}</div>  <div>{{team.club}}</div> <div>{{team.winners}}</div></div>
+    <div class="inner-small">{{team.rank}}</div>
+    <div class="inner-wide">{{team.name}}</div>
+    <div class="inner-small">{{team.winners}}</div></div>
   </div>
  </div>
 </div>
